--- a/student-rest-api-producer-production.properties
+++ b/student-rest-api-producer-production.properties
@@ -1,1 +1,5 @@
-msg=hello world this spring cloud production config by siddik
+msg=hello world this spring cloud  production config by siddik 
+
+url_link=hello world this spring cloud www.google.com/production  production config by siddik 
+
+dbpropertise=hello world this spring cloud user-root-root  production config by siddik 
