--- a/student-rest-api-producer.properties
+++ b/student-rest-api-producer.properties
@@ -1,1 +1,5 @@
-msg=hello world this spring cloud config by siddik
+msg=hello world this spring cloud   config by siddik 
+
+url_link=hello world this spring cloud www.test.com  config by siddik 
+
+dbpropertise=hello world this spring cloud www.test.com   config by siddik 
