--- a/student-rest-api-producer-development.properties
+++ b/student-rest-api-producer-development.properties
@@ -1,1 +1,5 @@
 msg=hello world this spring cloud  development config by siddik 
+
+url_link=hello world this spring cloud www.google.com development config by siddik 
+
+dbpropertise=hello world this spring cloud user-root  development config by siddik 
